deploy/argocd/rest-heroes-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/connects-to: "heroes-db,otel-collector"
    app.openshift.io/vcs-ref: main
    app.quarkus.io/build-timestamp: 2022-11-10 - 15:15:19 +0000
  labels:
    app.kubernetes.io/name: rest-heroes
    app.kubernetes.io/part-of: heroes-service
    app.kubernetes.io/version: java17-latest
    app: rest-heroes
    application: heroes-service
    system: quarkus-super-heroes
    app.openshift.io/runtime: quarkus
  name: rest-heroes
spec:
  host: ""
  port:
    targetPort: http
  to:
    kind: Service
    name: rest-heroes
---
